Closed Bug 1334230 Opened 8 years ago Closed 8 years ago

"media.wmf.allow-unsupported-resolutions"=true disables H264 altogether

Categories

(Core :: Audio/Video: Playback, defect)

49 Branch
All
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox53 --- fixed
firefox54 --- fixed

People

(Reporter: mozbugz, Assigned: mozbugz)

References

Details

Attachments

(1 file)

Bug 1329824 introduced an extra pref-check before testing for supported H264 resolutions on Windows.
Unfortunately if "media.wmf.allow-unsupported-resolutions" is true, it just bypasses the whole H264-related block, including its final 'return true', so we end up disabling H264 altogether.
Comment on attachment 8830859 [details]
Bug 1334230 - media.wmf.allow-unsupported-resolutions=true should not disable H264 -

https://reviewboard.mozilla.org/r/107548/#review108690
Attachment #8830859 - Flags: review?(jyavenard) → review+
Pushed by gsquelart@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d4df7b5bddb5
media.wmf.allow-unsupported-resolutions=true should not disable H264 - r=jya
https://hg.mozilla.org/mozilla-central/rev/d4df7b5bddb5
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Issue in bug 1329824 landed in 53, now Aurora.
Comment on attachment 8830859 [details]
Bug 1334230 - media.wmf.allow-unsupported-resolutions=true should not disable H264 -

Approval Request Comment
[Feature/Bug causing the regression]: Bug 1329824
[User impact if declined]: "media.wmf.allow-unsupported-resolutions" is useless
[Is this code covered by automated tests?]: No, as it's an escape hatch for some power users
[Has the fix been verified in Nightly?]: Not yet
[Needs manual test from QE? If yes, steps to reproduce]: On Windows, set "media.wmf.allow-unsupported-resolutions" to true, go to youtube.com/html5 and verify that H264 is still available
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No
[Why is the change risky/not risky?]: All it does is re-establish a fallback to the pre-existing 'return true' when the pref is set to true
[String changes made/needed]: None
Attachment #8830859 - Flags: approval-mozilla-aurora?
Comment on attachment 8830859 [details]
Bug 1334230 - media.wmf.allow-unsupported-resolutions=true should not disable H264 -

Pref tweak to allow user control over h264, let's uplift for 53 aurora.
Attachment #8830859 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: