Bug 1334230 - media.wmf.allow-unsupported-resolutions=true should not disable H264 - r=jya

Previously the combined tests meant that if a track was H264, and we supported
H264, BUT media.wmf.allow-unsupported-resolutions==true, we would just skip the
whole block, meaning we would return 'false' (unsupported) in the end.

Instead, if a track is H264, and we support H264, we should return 'true'
(supported), unless media.wmf.allow-unsupported-resolutions==false and the
resolution is too high.

MozReview-Commit-ID: 5YUhlxmfPIO